// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinearGenomeView genome view component renders one track, no blocks 1`] = `
<div
  class="makeStyles-root-1"
>
  <div
    class="makeStyles-linearGenomeView-2"
    style="display: grid; position: relative; grid-template-rows: [scale-bar] auto [track-foo] 20px [resize-foo] 3px; grid-template-columns: [controls] 100px [blocks] auto;"
  >
    <div
      class="makeStyles-controls-3 makeStyles-viewControls-4"
      style="grid-row: scale-bar;"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-7"
        tabindex="0"
        title="close this view"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiToggleButton-root makeStyles-toggleButton-8"
        data_testid="track_select"
        tabindex="0"
        title="select tracks"
        type="button"
        value="track_select"
      >
        <span
          class="MuiToggleButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            line_style
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="Rubberband-rubberBandContainer-37"
      role="presentation"
    >
      <div
        class="ScaleBar-scaleBar-38"
        style="height: 32px;"
      />
    </div>
    <div
      class="makeStyles-zoomControls-6"
      style="right: 4px; z-index: 1000;"
    >
      <div
        class="ZoomControls-container-40"
        style="height: 32px;"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_out
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiSlider-root ZoomControls-slider-41"
        >
          <span
            class="MuiSlider-rail"
          />
          <span
            class="MuiSlider-track"
          />
          <input
            type="hidden"
            value="5.643856189774724"
          />
          <span
            aria-orientation="horizontal"
            aria-valuemax="5.643856189774724"
            aria-valuemin="5.643856189774724"
            aria-valuenow="5.643856189774724"
            class="MuiSlider-thumb"
            data-index="0"
            role="slider"
            tabindex="0"
          />
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_in
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="makeStyles-controls-3 makeStyles-trackControls-5"
      style="grid-row: track-foo; grid-column: controls;"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root TrackControls-iconButton-73"
        tabindex="0"
        title="close this track"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiToggleButton-root TrackControls-toggleButton-74 MuiToggleButton-sizeSmall"
        style="min-width: 0;"
        tabindex="0"
        title="configure track"
        type="button"
        value="configure"
      >
        <span
          class="MuiToggleButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            settings
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <p
        class="MuiTypography-root TrackControls-trackName-71 MuiTypography-body1"
      >
        Foo Track
      </p>
      <span
        class="MuiTypography-root TrackControls-trackDescription-72 MuiTypography-caption MuiTypography-colorTextSecondary"
      />
    </div>
    <div
      class="TrackRenderingContainer-trackRenderingContainer-105"
      role="presentation"
      style="grid-row: track-foo; grid-column: blocks;"
    >
      <div
        class="Track-track-106"
        data-testid="track-testConfig"
        role="presentation"
      >
        <div
          class="TrackBlocks-trackBlocks-107"
          data-testid="Block"
        />
      </div>
    </div>
    <div
      class="ResizeHandleHorizontal-dragHandle-110"
      role="presentation"
      style="grid-row: resize-foo; grid-column: span 2;"
    />
  </div>
</div>
`;

exports[`LinearGenomeView genome view component renders two tracks, two regions 1`] = `
<div
  class="makeStyles-root-1"
>
  <div
    class="makeStyles-linearGenomeView-2"
    style="display: grid; position: relative; grid-template-rows: [scale-bar] auto [track-foo] 20px [resize-foo] 3px [track-bar] 20px [resize-bar] 3px; grid-template-columns: [controls] 100px [blocks] auto;"
  >
    <div
      class="makeStyles-controls-3 makeStyles-viewControls-4"
      style="grid-row: scale-bar;"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-7"
        tabindex="0"
        title="close this view"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiToggleButton-root makeStyles-toggleButton-8"
        data_testid="track_select"
        tabindex="0"
        title="select tracks"
        type="button"
        value="track_select"
      >
        <span
          class="MuiToggleButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            line_style
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="Rubberband-rubberBandContainer-37"
      role="presentation"
    >
      <div
        class="ScaleBar-scaleBar-38"
        style="height: 32px;"
      >
        <div
          class="Block-block-111 Block-leftBorder-112 Block-rightBorder-113"
          style="left: 0px; width: 100px;"
        >
          <svg
            height="32"
            width="100"
          >
            <line
              class="Ruler-majorTick-115"
              data-bp="-1"
              stroke="#555"
              stroke-width="1"
              x1="-1"
              x2="-1"
              y1="0"
              y2="6"
            />
            <line
              class="Ruler-minorTick-116"
              data-bp="19"
              stroke="#999"
              stroke-width="1"
              x1="19"
              x2="19"
              y1="0"
              y2="4"
            />
            <line
              class="Ruler-minorTick-116"
              data-bp="39"
              stroke="#999"
              stroke-width="1"
              x1="39"
              x2="39"
              y1="0"
              y2="4"
            />
            <line
              class="Ruler-minorTick-116"
              data-bp="59"
              stroke="#999"
              stroke-width="1"
              x1="59"
              x2="59"
              y1="0"
              y2="4"
            />
            <line
              class="Ruler-minorTick-116"
              data-bp="79"
              stroke="#999"
              stroke-width="1"
              x1="79"
              x2="79"
              y1="0"
              y2="4"
            />
            <line
              class="Ruler-majorTick-115"
              data-bp="99"
              stroke="#555"
              stroke-width="1"
              x1="99"
              x2="99"
              y1="0"
              y2="6"
            />
            <line
              class="Ruler-minorTick-116"
              data-bp="119"
              stroke="#999"
              stroke-width="1"
              x1="119"
              x2="119"
              y1="0"
              y2="4"
            />
            <text
              class="Ruler-majorTickLabel-114"
              dominant-baseline="hanging"
              style="font-size: 11px;"
              x="-4"
              y="7"
            >
              0
            </text>
            <text
              class="Ruler-majorTickLabel-114"
              dominant-baseline="hanging"
              style="font-size: 11px;"
              x="96"
              y="7"
            >
              100
            </text>
          </svg>
        </div>
        <div
          class="ScaleBar-refLabel-39"
        >
          ctgA
        </div>
      </div>
    </div>
    <div
      class="makeStyles-zoomControls-6"
      style="right: 4px; z-index: 1000;"
    >
      <div
        class="ZoomControls-container-40"
        style="height: 32px;"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_out
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiSlider-root ZoomControls-slider-41"
        >
          <span
            class="MuiSlider-rail"
          />
          <span
            class="MuiSlider-track"
          />
          <input
            type="hidden"
            value="5.643856189774724"
          />
          <span
            aria-orientation="horizontal"
            aria-valuemax="5.643856189774724"
            aria-valuemin="5.643856189774724"
            aria-valuenow="5.643856189774724"
            class="MuiSlider-thumb"
            data-index="0"
            role="slider"
            tabindex="0"
          />
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_in
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="makeStyles-controls-3 makeStyles-trackControls-5"
      style="grid-row: track-foo; grid-column: controls;"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root TrackControls-iconButton-73"
        tabindex="0"
        title="close this track"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiToggleButton-root TrackControls-toggleButton-74 MuiToggleButton-sizeSmall"
        style="min-width: 0;"
        tabindex="0"
        title="configure track"
        type="button"
        value="configure"
      >
        <span
          class="MuiToggleButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            settings
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <p
        class="MuiTypography-root TrackControls-trackName-71 MuiTypography-body1"
      >
        Foo Track
      </p>
      <span
        class="MuiTypography-root TrackControls-trackDescription-72 MuiTypography-caption MuiTypography-colorTextSecondary"
      />
    </div>
    <div
      class="TrackRenderingContainer-trackRenderingContainer-105"
      role="presentation"
      style="grid-row: track-foo; grid-column: blocks;"
    >
      <div
        class="Track-track-106"
        data-testid="track-testConfig"
        role="presentation"
      >
        <div
          class="TrackBlocks-trackBlocks-107"
          data-testid="Block"
        >
          <div
            class="Block-block-111 Block-leftBorder-112 Block-rightBorder-113"
            style="left: 0px; width: 100px;"
          >
            <div
              class="Component-blockMessage-121"
            >
              region assembly does not match track assembly
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ResizeHandleHorizontal-dragHandle-110"
      role="presentation"
      style="grid-row: resize-foo; grid-column: span 2;"
    />
    <div
      class="makeStyles-controls-3 makeStyles-trackControls-5"
      style="grid-row: track-bar; grid-column: controls;"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root TrackControls-iconButton-73"
        tabindex="0"
        title="close this track"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiToggleButton-root TrackControls-toggleButton-74 MuiToggleButton-sizeSmall"
        style="min-width: 0;"
        tabindex="0"
        title="configure track"
        type="button"
        value="configure"
      >
        <span
          class="MuiToggleButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            settings
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <p
        class="MuiTypography-root TrackControls-trackName-71 MuiTypography-body1"
      >
        Bar Track
      </p>
      <span
        class="MuiTypography-root TrackControls-trackDescription-72 MuiTypography-caption MuiTypography-colorTextSecondary"
      />
    </div>
    <div
      class="TrackRenderingContainer-trackRenderingContainer-105"
      role="presentation"
      style="grid-row: track-bar; grid-column: blocks;"
    >
      <div
        class="Track-track-106"
        data-testid="track-testConfig2"
        role="presentation"
      >
        <div
          class="TrackBlocks-trackBlocks-107"
          data-testid="Block"
        >
          <div
            class="Block-block-111 Block-leftBorder-112 Block-rightBorder-113"
            style="left: 0px; width: 100px;"
          >
            <div
              class="Component-blockMessage-121"
            >
              region assembly does not match track assembly
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ResizeHandleHorizontal-dragHandle-110"
      role="presentation"
      style="grid-row: resize-bar; grid-column: span 2;"
    />
  </div>
</div>
`;

exports[`LinearGenomeView genome view component renders with an empty model 1`] = `
<div
  class="makeStyles-root-1"
>
  <div
    class="makeStyles-linearGenomeView-2"
    style="display: grid; position: relative; grid-template-rows: [scale-bar] auto; grid-template-columns: [controls] 100px [blocks] auto;"
  >
    <div
      class="makeStyles-controls-3 makeStyles-viewControls-4"
      style="grid-row: scale-bar;"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-7"
        tabindex="0"
        title="close this view"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiToggleButton-root makeStyles-toggleButton-8"
        data_testid="track_select"
        tabindex="0"
        title="select tracks"
        type="button"
        value="track_select"
      >
        <span
          class="MuiToggleButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            line_style
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="Rubberband-rubberBandContainer-37"
      role="presentation"
    >
      <div
        class="ScaleBar-scaleBar-38"
        style="height: 32px;"
      />
    </div>
    <div
      class="makeStyles-zoomControls-6"
      style="right: 4px; z-index: 1000;"
    >
      <div
        class="ZoomControls-container-40"
        style="height: 32px;"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_out
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiSlider-root ZoomControls-slider-41"
        >
          <span
            class="MuiSlider-rail"
          />
          <span
            class="MuiSlider-track"
          />
          <input
            type="hidden"
            value="5.643856189774724"
          />
          <span
            aria-orientation="horizontal"
            aria-valuemax="5.643856189774724"
            aria-valuemin="5.643856189774724"
            aria-valuenow="5.643856189774724"
            class="MuiSlider-thumb"
            data-index="0"
            role="slider"
            tabindex="0"
          />
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_in
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
